banner div 1 added stuffs

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -48,16 +48,18 @@
         <div class="banner_container_background_holder banner_container_background_holder_0"></div>
         <div class="banner_container_background_holder banner_container_background_holder_1"></div>
         <div class="banner_slide" id="banner_slide_0">
-          <div class="banner_slide_1_div">
+          <div class="banner_slide_div">
             <img src="/static/resources/logos/cube_chaos_white_border.png">
             <img src="/static/resources/logos/cave_update.png">
           </div>
           <img src="/static/resources/banner/mobs/goat.png">
         </div>
         <div class="banner_slide" id="banner_slide_1">
-          <div class="banner_slide_1_div">
-            <img src="/static/resources/logos/cube_chaos_white_border.png">
-            <img id="banner_nether_update" src="/static/resources/logos/nether_update.png">
+          <div class="banner_slide_div" id="banner_slide_1_div">
+            <img id="banner_slide_1_java_edition" src="/static/resources/logos/java_edition.png">
+            <a href="/static/html/java_edition.html">
+              <img class="banner_download_button" src="/static/resources/buttons/download_buttons/download.png">
+            </a>
           </div>
           <img src="https://render.namemc.com/skin/3d/body.png?skin=0c92ffd8432955b5&model=classic&width=282&height=282">
         </div>
