--- a/static/html/index.html
+++ b/static/html/index.html
@@ -57,11 +57,18 @@
         <div class="banner_slide" id="banner_slide_1">
           <div class="banner_slide_div" id="banner_slide_1_div">
             <img id="banner_slide_1_java_edition" src="/static/resources/logos/java_edition.png">
-            <a href="/static/html/java_edition.html">
-              <img class="banner_download_button" src="/static/resources/buttons/download_buttons/download.png">
+            <a class="banner_download_button" href="/static/html/java_edition.html">
+              <img  src="/static/resources/buttons/download_buttons/download.png">
             </a>
           </div>
-          <img src="https://render.namemc.com/skin/3d/body.png?skin=0c92ffd8432955b5&model=classic&width=282&height=282">
+        </div>
+        <div class="banner_slide" id="banner_slide_2">
+          <div class="banner_slide_div" id="banner_slide_2_div">
+            <img id="banner_slide_2_bedrock_edition" src="/static/resources/logos/bedrock_edition.png">
+            <a class="banner_marketplace_button" href="/static/html/bedrock_edition.html">
+              <img  src="/static/resources/buttons/download_buttons/button_marketplace.png">
+            </a>
+          </div>
         </div>
         
       </div>
