--- a/static/html/team.html
+++ b/static/html/team.html
@@ -101,6 +101,29 @@
     <script src="/static/js/jquery-3.6.0.min.js"></script>
     <script src="/static/js/base.js"></script>
     <script>
+      $(window).on('load resize', function() { //Fires when window is loaded or resized
+      var div1 = $('#textbox_to_swap_0');
+      var div2 = $('#team_picture_to_swap_0');
+      var wrapper = $('#team_member_to_swap_0');
+
+      if ($(window).width() > 1000) {
+        wrapper.prepend(div1).append(div2); // move div 1 to start & div2 to end
+      } else {
+        wrapper.prepend(div2).append(div1); // move div 2 to start & div 1 to end
+      }
+    });
+
+    setTimeout(function () {
+        $(".team_text").height($(".team_picture").height()); 
+        $(".team_text").height($(".team_text").height()-3); 
+    }, 200);
+
+    $(window).resize(function () {
+        if ($(window).width() >= 1000) {
+          $(".team_text").height($(".team_picture").height()); 
+          $(".team_text").height($(".team_text").height() - 3); 
+        }
+    });
     </script>
   </body>
 </html>
