added Bugs button to navbar

--- a/static/html/team.html
+++ b/static/html/team.html
@@ -41,6 +41,7 @@
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
       <a href="/static/html/downloads.html" class="navbar_button"> Downloads </a>
       <a href="/static/html/team.html" class="navbar_button"> Team </a>
+      <a href="https://github.com/Mr3DAlien/Alien-Webserver/issues" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
     <div class="content">
@@ -48,7 +49,7 @@
         <div class="team_member_wrapper">
           <img class="team_member_picture" src="/static/resources/team/logo/mr3dalien_background.png">
           <div class="team_member_text">
-            <p>AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA AAAAAA</p>
+            <p>Hello, I am Mr3DAlien, but most people just call me Alien. I am the creator of this resourcepack and managed to publish it in the "Minecraft Markerplace" in cooperation with "Pathway Studios". Since 2018 I am partner of "Stickypiston" who also host this website and all minecraft server related projects. 2017 was the year in which I published my first map "Advanced Sky" on "Minecraft Realms" and later that year my second one "Cave Game" which made my proud carrier of the "Mapmakers Cape". I also produce german lets play videos on my youtube channel and livestream on twitch.</p>
           </div>
         </div>
       </div>
