--- a/static/html/index.html
+++ b/static/html/index.html
@@ -41,6 +41,7 @@
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
       <a href="/static/html/downloads.html" class="navbar_button"> Downloads </a>
       <a href="/static/html/team.html" class="navbar_button"> Team </a>
+      <a href="https://github.com/Mr3DAlien/Alien-Webserver/issues" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
     <div class="banner_space">
