--- a/static/html/index.html
+++ b/static/html/index.html
@@ -20,19 +20,19 @@
 
         </div>
         <div id="header_icons">
-          <a href="https://twitter.com/CubeChaosRP">
-            <img id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+          <a class="header_a" href="https://twitter.com/CubeChaosRP">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
           </a>
           <a href="https://github.com/Mr3DAlien/Alien-Webserver">
-            <img id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
           </a>
           <a href="http://mr3dalien.net/">
-            <img id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
           </a>
         </div>
       </div>
