--- a/static/html/index.html
+++ b/static/html/index.html
@@ -71,7 +71,31 @@
             </a>
           </div>
         </div>
-        
+        <div class="banner_slide" id="banner_slide_3">
+          <div class="banner_slide_div" id="banner_slide_3div">
+            <img id="banner_slide_3_mr3dalien" src="/static/resources/banner/logo/mr3dalien_text_logo.png">
+            <div id="banner_slide_3_buttons">
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/website.png">
+              </a>
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/youtube.png">
+              </a>
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/twitter.png">
+              </a>
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/instagram.png">
+              </a>
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/spotify.png">
+              </a>
+              <a class="banner_slide_3_button">
+                <img src="/static/resources/banner/buttons/donate.png">
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
       <button class="banner_button banner_left_button"></button>
       <button class="banner_button banner_right_button">
