as you wish master

--- a/static/html/bugs.html
+++ b/static/html/bugs.html
@@ -6,7 +6,6 @@
     <title>CubeChaos</title>
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="icon" type="image/x-icon" href="/static/resources/icons/cube_chaos_icon.svg" />
-
   </head>
   <body>
     <div id="header">
@@ -45,31 +44,28 @@
       <a href="/static/html/bugs.html" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
-      <div class="content">
-        <img class="java_logo" src="https://static.wixstatic.com/media/44b079_f76f1cfd9cf549aaa1d33cabdc863a58~mv2.png/v1/fill/w_512,h_64,al_c,q_85/edition.webp">
-        <div class="screenshot_slide">
-          <div id="compare">
-            <img id="slider_left_img" src="/static/resources/screenshots/addons/3d_ores_off.png.webp" alt="Before" />
-            <img id="slider_right_img" src="/static/resources/screenshots/addons/3d_ores_on.png.webp" alt="After" />
-          </div>
-            <!--</div>
-            <div class="screenshot_slide_selector_btn screenshot_slide_selector_left"></div>
-            <div class="screenshot_slide_selector_btn screenshot_slide_selector_right"></div>
-          </div> -->
+    <div class="content">
+      <div class="transparent_text_container">
+        <div class="transparent_text">
+Bringing a nice comic look with some sweet mobs and blocks that you just want to hug, this pack takes Minecraft to a whole new level.
+
+- 16x16 resolution
+- Comic oriented look
+- Every block is made of randomly selected cubes
+- Uses the default color palette for that familiar feeling we all know and love
+- By Mr3DAlien
         </div>
-        <div class="version_selection_wrapper">
-          <div class="relevant_versions">
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_8990d0c894d041c1acdba74f90b3e7a8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_16%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_cf635856e6c241e6be58d76814f42b41~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_15%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_1400c5c7a5954b3fb8992dfc06df7169~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_14%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_bb1919d24ab9411fb3e0b65406a3cbc8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_13%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_9d6e4accc2ff47008cc5d65518306d42~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_12%5D.webp"></a>
-          </div>
-          <!-- <div class="more_versions">
-            <img id="more_versions_button_addons" src="../resources/buttons/download_buttons/more_button.png">
-          </div>-->
+        <div class="transparent_text_background">
         </div>
+      </div>
+      <div class="bugs_buttons">
+          <a href="addons_html/">
+              <img src="/static/resources/buttons/download_buttons/changelogs.png">
+          </a>
+          <a href="addons_html/">
+            <img src="/static/resources/buttons/download_buttons/changelogs.png">
+        </a>
+      </div>
     </div>
     <div class="footer">
       <div class="footer_content">
@@ -104,14 +100,9 @@
     </div>
     <script src="/static/js/anime.min.js"></script>
     <script src="/static/js/jquery-3.6.0.min.js"></script>
-    <script src="/static/js/slider.js"></script>
+    <script src="/static/js/banner.js"></script>
     <script src="/static/js/base.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        var beforeAfterExample = new BeforeAfter(document.querySelector('#compare'));
-      });
-
-      
     </script>
   </body>
 </html>
