--- a/static/html/index.html
+++ b/static/html/index.html
@@ -41,7 +41,7 @@
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
       <a href="/static/html/downloads.html" class="navbar_button"> Downloads </a>
       <a href="/static/html/team.html" class="navbar_button"> Team </a>
-      <a href="https://github.com/Mr3DAlien/Alien-Webserver/issues" class="navbar_button"> Bugs </a>
+      <a href="/static/html/bugs.html" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
     <div class="banner_space">
@@ -75,19 +75,19 @@
           <div class="banner_slide_div" id="banner_slide_3div">
             <img id="banner_slide_3_mr3dalien" src="/static/resources/banner/logo/mr3dalien_text_logo.png">
             <div id="banner_slide_3_buttons">
-              <a class="banner_slide_3_button">
+              <a class="banner_slide_3_button" href="http://mr3dalien.net/">
                 <img src="/static/resources/banner/buttons/website.png">
               </a>
-              <a class="banner_slide_3_button">
+              <a class="banner_slide_3_button" href="https://www.youtube.com/c/Mr3DAlien">
                 <img src="/static/resources/banner/buttons/youtube.png">
               </a>
-              <a class="banner_slide_3_button">
+              <a class="banner_slide_3_button" href="https://twitter.com/cubechaosrp">
                 <img src="/static/resources/banner/buttons/twitter.png">
               </a>
-              <a class="banner_slide_3_button">
+              <a class="banner_slide_3_button" href="https://www.instagram.com/mr3dalien/">
                 <img src="/static/resources/banner/buttons/instagram.png">
               </a>
-              <a class="banner_slide_3_button">
+              <a class="banner_slide_3_button" href="https://open.spotify.com/user/mr3dalien">
                 <img src="/static/resources/banner/buttons/spotify.png">
               </a>
               <a class="banner_slide_3_button">
