--- a/static/html/addons.html
+++ b/static/html/addons.html
@@ -20,19 +20,19 @@
 
         </div>
         <div id="header_icons">
-          <a href="https://twitter.com/CubeChaosRP">
-            <img id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+          <a class="header_a" href="https://twitter.com/CubeChaosRP">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
           </a>
           <a href="https://github.com/Mr3DAlien/Alien-Webserver">
-            <img id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
           </a>
           <a href="http://mr3dalien.net/">
-            <img id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
           </a>
         </div>
       </div>
@@ -41,7 +41,7 @@
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
       <a href="/static/html/downloads.html" class="navbar_button"> Downloads </a>
       <a href="/static/html/team.html" class="navbar_button"> Team </a>
-      <a href="https://github.com/Mr3DAlien/Alien-Webserver/issues" class="navbar_button"> Bugs </a>
+      <a href="/static/html/bugs.html" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
     <div class="content">
