--- a/static/html/java_edition.html
+++ b/static/html/java_edition.html
@@ -21,19 +21,19 @@
 
         </div>
         <div id="header_icons">
-          <a href="https://twitter.com/CubeChaosRP">
-            <img id="header_twitter_icon" src="/static/resources/icons/twitter.png">
+          <a class="header_a" href="https://twitter.com/CubeChaosRP">
+            <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
           </a>
           <a href="https://github.com/Mr3DAlien/Alien-Webserver">
-            <img id="header_github_icon" src="/static/resources/icons/github.png">
+            <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
           </a>
           <a href="http://mr3dalien.net/">
-            <img id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
+            <img class="header_icon_pop" id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
           </a>
         </div>
         <div id="banner_sticky_piston_logo">
           <a href="https://stickypiston.co/r/Mr3DAlien">
-            <img src="/static/resources/icons/stickypiston.png">
+            <img class="header_icon_pop" src="/static/resources/icons/stickypiston.png">
           </a>
         </div>
       </div>
@@ -42,7 +42,7 @@
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
       <a href="/static/html/downloads.html" class="navbar_button"> Downloads </a>
       <a href="/static/html/team.html" class="navbar_button"> Team </a>
-      <a href="https://github.com/Mr3DAlien/Alien-Webserver/issues" class="navbar_button"> Bugs </a>
+      <a href="/static/html/bugs.html" class="navbar_button"> Bugs </a>
     </div>
     <div class="header_spacer"></div>
       <div class="content">
@@ -100,7 +100,10 @@
             <img id="more_versions_button" src="/static/resources/buttons/download_buttons/more_button.png">
           </div>
         </div>
-    </div>
+        <a class="java_changelog_button_a" href="http://changelogs.cubechaos.net/">
+          <img class="java_changelog_button" src="/static/resources/buttons/download_buttons/changelogs.png">
+        </a>
+      </div>
     <div class="footer">
       <div class="footer_content">
         <div class="footer_about_left">
