updated buttons on Mr3DAlien banner panel

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -81,7 +81,10 @@
               <a class="banner_slide_3_button" href="https://www.youtube.com/c/Mr3DAlien">
                 <img src="/static/resources/banner/buttons/youtube.png">
               </a>
-              <a class="banner_slide_3_button" href="https://twitter.com/cubechaosrp">
+              <a class="banner_slide_3_button" href="https://twitch.tv/Mr3DAlien">
+                <img src="/static/resources/banner/buttons/twitch.png">
+              </a>
+              <a class="banner_slide_3_button" href="https://twitter.com/Mr3DAlien">
                 <img src="/static/resources/banner/buttons/twitter.png">
               </a>
               <a class="banner_slide_3_button" href="https://www.instagram.com/mr3dalien/">
@@ -89,9 +92,6 @@
               </a>
               <a class="banner_slide_3_button" href="https://open.spotify.com/user/mr3dalien">
                 <img src="/static/resources/banner/buttons/spotify.png">
-              </a>
-              <a class="banner_slide_3_button">
-                <img src="/static/resources/banner/buttons/donate.png">
               </a>
             </div>
           </div>
