added 1.7 and 1.6 download button

--- a/static/html/java_edition.html
+++ b/static/html/java_edition.html
@@ -77,7 +77,7 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360176" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495623" class="version"><img src="/static/resources/buttons/download_buttons/version_1.17_green.png"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360174" class="version"><img src="/static/resources/buttons/download_buttons/version_1.16_green.png"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325875" class="version"><img src="/static/resources/buttons/download_buttons/version_1.15_green.png"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325889" class="version"><img src="/static/resources/buttons/download_buttons/version_1.14_green.png"></a>
@@ -87,8 +87,8 @@
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325941" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.10_green.png"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325951" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.9_green.png"></a>
             <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3333944" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.8_green.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.7_red.png"></a>
-            <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.6_red.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495620" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.7_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3495618" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.6_green.png"></a>
             <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.5_red.png"></a>
             <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.4_red.png"></a>
             <a href="#" class="version additional_version"><img src="/static/resources/buttons/download_buttons/version_1.3_red.png"></a>
