--- a/static/html/team.html
+++ b/static/html/team.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-    <meta http-equiv="expires" content="43200">
+    <meta http-equiv="expires" content="26400">
     <title>CubeChaos</title>
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="icon" type="image/x-icon" href="/static/resources/icons/cube_chaos_icon.svg" />
@@ -23,7 +23,7 @@
           <a class="header_a" href="https://twitter.com/CubeChaosRP">
             <img class="header_icon_pop" id="header_twitter_icon" src="/static/resources/icons/twitter.png">
           </a>
-          <a href="https://github.com/Mr3DAlien/Alien-Webserver">
+          <a href="https://github.com/CubeChaos">
             <img class="header_icon_pop" id="header_github_icon" src="/static/resources/icons/github.png">
           </a>
           <a href="http://mr3dalien.net/">
@@ -87,7 +87,7 @@
               <table>
                 <li><a href="https://twitter.com/mr3dalien">Twitter</a></li>
                 <li><a href="https://youtube.com/mr3dalien">Youtube</a></li>
-                <li><a href="https://github.com/Mr3DAlien/Alien-Webserver">GitHub</a></li>
+                <li><a href="https://github.com/CubeChaos">GitHub</a></li>
                 <li><a href="http://mr3dalien.net">Mr3DAlien</a></li>
               </table>
           </div>
