--- a/static/html/index.html
+++ b/static/html/index.html
@@ -97,7 +97,9 @@
           </div>
         </div>
       </div>
-      <button class="banner_button banner_left_button"></button>
+      <button class="banner_button banner_left_button">
+        <img src="https://img1.pnghut.com/21/17/2/HG0DLvrspQ/symbol-cursor-black-user-interface-button.jpg" width="20px" height="20px">
+      </button>
       <button class="banner_button banner_right_button">
         <img src="https://img1.pnghut.com/21/17/2/HG0DLvrspQ/symbol-cursor-black-user-interface-button.jpg" width="20px" height="20px">
       </button>
