added arrow to banner

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -98,10 +98,10 @@
         </div>
       </div>
       <button class="banner_button banner_left_button">
-        <img src="https://img1.pnghut.com/21/17/2/HG0DLvrspQ/symbol-cursor-black-user-interface-button.jpg" width="20px" height="20px">
+        <img src="/static/resources/banner/buttons/arrow.png" width="60px" height="60px">
       </button>
       <button class="banner_button banner_right_button">
-        <img src="https://img1.pnghut.com/21/17/2/HG0DLvrspQ/symbol-cursor-black-user-interface-button.jpg" width="20px" height="20px">
+        <img src="/static/resources/banner/buttons/arrow.png" width="60px" height="60px">
       </button>
     </div>
     <div class="content">
