added link to the website bugs button

--- a/static/html/bugs.html
+++ b/static/html/bugs.html
@@ -62,7 +62,7 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
           <a href="addons_html/">
               <img src="/static/resources/buttons/download_buttons/bugs_resourcepack.png">
           </a>
-          <a href="addons_html/">
+          <a href="https://github.com/Mr3DAlien/CubeChaos-Website/issues">
             <img src="/static/resources/buttons/download_buttons/bugs_website.png">
         </a>
       </div>
