--- a/static/html/bugreport_resourepack.html
+++ b/static/html/bugreport_resourepack.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
     <meta http-equiv="expires" content="26400">
-    <title>CubeChaos</title>
+    <title>CubeChaos - Downloads</title>
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="icon" type="image/x-icon" href="/static/resources/icons/cube_chaos_icon.svg" />
   </head>
@@ -45,25 +45,18 @@
     </div>
     <div class="header_spacer"></div>
     <div class="content">
-      <div class="transparent_text_container">
-        <div class="transparent_text">
-Bringing a nice comic look with some sweet mobs and blocks that you just want to hug, this pack takes Minecraft to a whole new level.
-
-- 16x16 resolution
-- Comic oriented look
-- Every block is made of randomly selected cubes
-- Uses the default color palette for that familiar feeling we all know and love
-- By Mr3DAlien
-        </div>
-        <div class="transparent_text_background">
-        </div>
-      </div>
-      <div class="bugs_buttons">
-          <a href="/static/html/bugreport_resourepack.html">
-              <img src="/static/resources/buttons/download_buttons/bugs_resourcepack.png">
-          </a>
-          <a href="https://github.com/Mr3DAlien/CubeChaos-Website/issues">
-            <img src="/static/resources/buttons/download_buttons/bugs_website.png">
+      <div class="content_sections">
+        <a href="/static/html/java_edition.html">
+          <img class="content_selection_image" id="java_edition_selection_image" src="/static/resources/buttons/big_buttons/java_edition.png.webp">
+        </a>
+        <a href="/static/html/bedrock_edition.html">
+          <img class="content_selection_image" id="bedrock_edition_selection_image" src="/static/resources/buttons/big_buttons/bedrock_edition.png.webp">
+        </a>
+        <a href="/static/html/addons.html">
+          <img class="content_selection_image" id="cubechaos_addons_selection_image" src="/static/resources/buttons/big_buttons/addons.png.webp">
+        </a>
+        <a href="http://mr3dalien.net">
+          <img class="content_selection_image" id="more_selection_image" src="/static/resources/buttons/big_buttons/more.png.webp">
         </a>
       </div>
     </div>
@@ -100,9 +93,9 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
     </div>
     <script src="/static/js/anime.min.js"></script>
     <script src="/static/js/jquery-3.6.0.min.js"></script>
-    <script src="/static/js/banner.js"></script>
     <script src="/static/js/base.js"></script>
     <script>
+
     </script>
   </body>
 </html>
