renamed "resourepack" to "resourcepack"

--- a/static/html/bugreport_resourcepack.html
+++ b/static/html/bugreport_resourcepack.html
@@ -47,16 +47,16 @@
     <div class="content">
       <div class="content_sections">
         <a href="/static/html/java_edition.html">
-          <img class="content_selection_image" id="java_edition_selection_image" src="/static/resources/buttons/bugs_buttons/java_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_1" src="/static/resources/buttons/bugs_buttons/java_edition.png">
         </a>
         <a href="/static/html/bedrock_edition.html">
-          <img class="content_selection_image" id="bedrock_edition_selection_image" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_2" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png">
         </a>
         <a href="/static/html/addons.html">
-          <img class="content_selection_image" id="cubechaos_addons_selection_image" src="/static/resources/buttons/bugs_buttons/addons.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_3" src="/static/resources/buttons/bugs_buttons/addons.png">
         </a>
         <a href="http://mr3dalien.net">
-          <img class="content_selection_image" id="more_selection_image" src="/static/resources/buttons/bugs_buttons/x-mas_edition.png">
+          <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_4" src="/static/resources/buttons/bugs_buttons/x-mas_edition.png">
         </a>
       </div>
     </div>
