added links to the issues pages and the addon page

--- a/static/html/bugreport_addon.html
+++ b/static/html/bugreport_addon.html
@@ -46,16 +46,16 @@
     <div class="header_spacer"></div>
     <div class="content">
       <div class="content_sections">
-        <a href="https://github.com/CubeChaos/CubeChaos_Java-Edition/issues">
+        <a href="/static/html/addons.html">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_1" src="/static/resources/buttons/bugs_buttons/java_edition.png">
         </a>
-        <a href="https://github.com/CubeChaos/CubeChaos_Bedrock-Edition/issues">
+        <a href="/static/html/addons.html">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_2" src="/static/resources/buttons/bugs_buttons/bedrock_edition.png">
         </a>
-        <a href="/static/html/bugreport_addon.html">
+        <a href="/static/html/addons.html">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_3" src="/static/resources/buttons/bugs_buttons/addons.png">
         </a>
-        <a href="https://github.com/CubeChaos/CubeChaos_Xmas_Edition">
+        <a href="/static/html/addons.html">
           <img class="bugreports_resourcepack_image" id="bugreports_resourcepack_image_4" src="/static/resources/buttons/bugs_buttons/x-mas_edition.png">
         </a>
       </div>
