added missing bedrock screenshots and banner background

--- a/static/html/bedrock_edition.html
+++ b/static/html/bedrock_edition.html
@@ -59,16 +59,11 @@
             <img class="screenshot_slide_preview_img simg_19" src="/static/resources/screenshots/bedrock_edition/mansion_cubechaos.png.webp">
             <img class="screenshot_slide_preview_img simg_20" src="/static/resources/screenshots/bedrock_edition/mineshaft_cubechaos.png.webp">
             <img class="screenshot_slide_preview_img simg_21" src="/static/resources/screenshots/bedrock_edition/village_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_22" src="/static/resources/screenshots/java_edition/pillager_outpost_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_23" src="/static/resources/screenshots/java_edition/monument_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_24" src="/static/resources/screenshots/java_edition/mansion_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_25" src="/static/resources/screenshots/java_edition/snowy_tundra_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_26" src="/static/resources/screenshots/java_edition/fortress_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_27" src="/static/resources/screenshots/java_edition/bastion_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_28" src="/static/resources/screenshots/java_edition/basalt_deltas_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_29" src="/static/resources/screenshots/java_edition/soul_sand_valley_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_30" src="/static/resources/screenshots/java_edition/warped_forest_cubechaos.png.webp">
-            <img class="screenshot_slide_preview_img simg_31" src="/static/resources/screenshots/java_edition/end_cubechaos.png.webp">
+            <img class="screenshot_slide_preview_img simg_22" src="/static/resources/screenshots/bedrock_edition/dripstone_cave_cubechaos.webp">
+            <img class="screenshot_slide_preview_img simg_23" src="/static/resources/screenshots/bedrock_edition/ice_spikes_cubechaos.webp">
+            <img class="screenshot_slide_preview_img simg_24" src="/static/resources/screenshots/bedrock_edition/mansion_inside_cubechaos.webp">
+            <img class="screenshot_slide_preview_img simg_25" src="/static/resources/screenshots/bedrock_edition/fortress_cubechaos.webp">
+            <img class="screenshot_slide_preview_img simg_26" src="/static/resources/screenshots/bedrock_edition/bastion_cubechoas.webp">
           </div>
             <!--</div>
             <div class="screenshot_slide_selector_btn screenshot_slide_selector_left"></div>
