Updated Addons Logos to show the right one now

--- a/static/html/addons_html/3d_ores.html
+++ b/static/html/addons_html/3d_ores.html
@@ -46,7 +46,7 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="java_logo" src="https://static.wixstatic.com/media/44b079_f76f1cfd9cf549aaa1d33cabdc863a58~mv2.png/v1/fill/w_512,h_64,al_c,q_85/edition.webp">
+        <img class="java_logo" src="/static/resources/logos/addon.png">
         <div class="screenshot_slide">
           <div id="compare">
             <img id="slider_left_img" src="/static/resources/screenshots/addons/3d_ores_off.png.webp" alt="Before" />
